# pastor

./: .containerignore  .gitignore  .gitlab-ci.yml  .gitremotes  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.org  README.txt  Rocket.toml  bash2version  build.rs  docker-compose.yml  flake.nix
deploy/: jsonnetfile.json  jsonnetfile.lock.json
deploy/environments/production/: main.jsonnet
deploy/lib/: pastor.libsonnet
nix/: nixos-module.nix
src/: cleanup.rs  config.rs  dict.rs  id.rs  main.rs  multipart.rs  tests.rs  tokens.rs  upload.rs  util.rs
src/file/: delete.rs  error.rs  get.rs  handle.rs  mod.rs  store.rs
src/handlers/: auth.rs  file.rs  mod.rs  ui.rs
static/styles/: generate-from-scss.sh  main.css  main.scss  readme.txt
templates/: base.html.tera  delete_result.html.tera  gui.html.tera  gui_result.html.tera  index.html.tera  retrieve.html.tera
