[package]
name = "pastor"
description = "The pastebin that hopefully doesn't suck"

version = "0.11.4"
homepage = "https://gitlab.com/cocainefarm/pastor"
repository = "https://gitlab.com/cocainefarm/pastor"
documentation = "https://docs.rs/pastor"
readme = "README.txt"

authors = ["Max Audron <audron@cocaine.farm>", "Lorenz Leitner <lrnz.ltnr@gmail.com>"]
edition = "2018"
license = "ISC"

include = ["static/**/*", "templates/**/*", "src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree_magic = { version = "0.2", features = ["staticmime"] }
mime_guess = "2"
rocket = "0.5.0-rc.1"
bincode = "1"
serde_derive = "1"
serde = "1"
chrono = "0.4"
rand = "0.8"
sled = "0.34"
syntect = "4"
tera = "1"
phf = { version = "0.10", features = ["macros"] }
anyhow = "1"

tokio = "1"

async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
once_cell = "1"

[build-dependencies]
grass = "0.10"
glob = "0.3"

[features]
default = ["iter_db"]

iter_db = []
iter_files = []

bench = []
