[package]
name = "pastor"
description = "The pastebin that hopefully doesn't suck"

version = "0.14.0"
homepage = "https://gitlab.com/cocainefarm/pastor"
repository = "https://gitlab.com/cocainefarm/pastor"
documentation = "https://docs.rs/pastor"
readme = "README.txt"

authors = [
    "Max Audron <audron@cocaine.farm>",
    "Lorenz Leitner <lrnz.ltnr@gmail.com>",
]
edition = "2024"
license = "ISC"

include = ["static/**/*", "templates/**/*", "src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
xattr = "1"


mime_guess = "2"
bincode = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
sled = "0.34"
syntect = "4"
tera = "1"
phf = { version = "0.10", features = ["macros"] }
anyhow = "1"
toml = "1"
inotify = "0.11"

magic = "0.16"

tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
tokio-util = "0.7"

async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# multipart parser stolen from rocket code
multer = { version = "2", features = ["tokio-io"] }

[dev-dependencies]
once_cell = "1"
tempfile = "3"
tracing-test = "0.2"

[build-dependencies]
grass = "0.13"
glob = "0.3"

[features]
default = []

magic_static = []

bench = []
