[package]
name = "pastor"
description = "The pastebin that hopefully doesn't suck"

version = "0.14.0"
homepage = "https://gitlab.com/cocainefarm/pastor"
repository = "https://gitlab.com/cocainefarm/pastor"
documentation = "https://docs.rs/pastor"
readme = "README.txt"

authors = [
    "Max Audron <audron@cocaine.farm>",
    "Lorenz Leitner <lrnz.ltnr@gmail.com>",
]
edition = "2024"
license = "ISC"

include = ["static/**/*", "templates/**/*", "src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }

axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
xattr = "1"


serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
syntect = "5"
tera = "1"

toml = "1"
inotify = "0.11"

magic = "0.16"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
anyhow = "1"

[build-dependencies]
grass = "0.13"
glob = "0.3"

[features]
default = []

magic_static = []

bench = []
